[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_cooys"]
[ext_resource type="PackedScene" uid="uid://bdhy4lnmrqak1" path="res://scenes/config.tscn" id="2_gekdv"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_cooys")

[node name="StartButton" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.0
offset_top = 152.0
offset_right = 23.0
offset_bottom = 183.0
grow_horizontal = 2
size_flags_horizontal = 4
text = "Start"

[node name="UpgradeCannonButton" type="Button" parent="."]
offset_left = 158.0
offset_top = 346.0
offset_right = 346.0
offset_bottom = 377.0
text = "Upgrade Cannon (10)"

[node name="UpgradeJumpsButton" type="Button" parent="."]
offset_left = 158.0
offset_top = 399.0
offset_right = 346.0
offset_bottom = 430.0
text = "Upgrade Jumps (10)"

[node name="CannonBar" type="ProgressBar" parent="."]
offset_left = 394.0
offset_top = 348.0
offset_right = 794.0
offset_bottom = 375.0
max_value = 10.0
step = 1.0
show_percentage = false

[node name="JumpsBar" type="ProgressBar" parent="."]
offset_left = 394.0
offset_top = 401.0
offset_right = 795.0
offset_bottom = 428.0
max_value = 10.0
step = 1.0
show_percentage = false

[node name="Config" parent="." instance=ExtResource("2_gekdv")]

[node name="MaxDistanceLabel" type="Label" parent="."]
offset_left = 160.0
offset_top = 269.0
offset_right = 231.0
offset_bottom = 295.0
text = "Best Distance: 0"

[node name="MoneyLabel" type="Label" parent="."]
offset_left = 160.0
offset_top = 299.0
offset_right = 231.0
offset_bottom = 325.0
text = "Money: 0"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="UpgradeCannonButton" to="." method="_on_upgrade_cannon_button_pressed"]
[connection signal="pressed" from="UpgradeJumpsButton" to="." method="_on_upgrade_jumps_button_pressed"]
